intTests/test_parse_errors/parser006.saw
// "rebindable" is not allowed in rec-bindings
rec f0 () = f1 ()
and rebindable f1 () = f0 ();
